--- a/styles.css
+++ b/styles.css
@@ -439,6 +439,7 @@ body {
     font-size: 48px;
     font-weight: 700;
     color: #000000;
+    margin-top: -2rem;
     margin-bottom: 2.5rem;
     line-height: 108%;
 }
