--- a/styles.css
+++ b/styles.css
@@ -565,6 +565,30 @@ body {
     z-index: 2;
 }
 
+.square-frame-container {
+    position: relative;
+    display: inline-block;
+}
+
+.square-frame {
+    width: 103px;
+    height: 103px;
+    background: #E0E2DE;
+    border-radius: 21px;
+}
+
+.green-frame-tiny {
+    position: absolute;
+    width: 39px;
+    height: 39px;
+    background: #008000;
+    border-radius: 8px;
+    transform: rotate(10deg);
+    top: -10px;
+    right: -10px;
+    z-index: 2;
+}
+
 .image-placeholder {
     width: 100%;
     height: 120px;
